# Medagent

./: .env.example  .gitignore  README.md  docker-compose.yml  medagent.py  pyproject.toml
alembic/versions/: 20260214_0001_add_core_medication_tables.py  20260215_0002_add_followups_and_ops_tickets.py
app/: __init__.py
app/db/: __init__.py  models.py
apps/ops_console/: README.md  index.html  index.ts  package.json
docs/: source_of_truth.md  template_pack.md
services/orchestrator/: agent_workflow.py  main.py  policy_gate.py
services/orchestrator/orchestrator/: main.py
services/scheduler/: main.py
services/scheduler/scheduler/: main.py
services/whatsapp_gateway/: main.py  outbound.py
services/whatsapp_gateway/whatsapp_gateway/: main.py
shared/contracts/: __init__.py  enums.py  models.py
shared/contracts/examples/: event_dose_confirmed.json  event_dose_due.json  event_dose_missed.json  event_refill_due.json  event_triage_alert.json  message_in.json  message_out.json
sql/: schema.sql
tests/: test_agent_workflow.py  test_contract_examples.py  test_contracts.py  test_flow.py  test_gateway_main.py  test_policy_and_gateway.py  test_policy_gate.py  test_scheduler_main.py
