[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medagent"
version = "0.1.0"
description = "Monorepo scaffold for WhatsApp support automation services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
[project]
name = "medagent-contracts"
version = "0.1.0"
dependencies = [
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
whatsapp_gateway = [
  "httpx>=0.27.0",
]
orchestrator = [
  "langgraph>=0.2.0",
  "openai>=1.40.0",
]
scheduler = [
  "apscheduler>=3.10.4",
  "redis>=5.0.7",
  "celery>=5.4.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["services"]
include = ["whatsapp_gateway*", "orchestrator*", "scheduler*"]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
name = "medagent"
version = "0.1.0"
description = "WhatsApp-first care concierge agent monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
